k8s/agent/svc.yaml
#
# Copyright (C) 2019-2026 vdaas.org vald team <vald@vdaas.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: v1
kind: Service
metadata:
  name: vald-agent
  labels:
    app.kubernetes.io/name: vald
    helm.sh/chart: vald-v1.8.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v1.8.0
    app.kubernetes.io/component: agent
spec:
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: readiness
      port: 3001
      targetPort: 3001
      protocol: TCP
    - name: pprof
      port: 6060
      targetPort: 6060
      protocol: TCP
  selector:
    app.kubernetes.io/name: vald
    app.kubernetes.io/component: agent
  clusterIP: None
  type: ClusterIP
