k8s/agent/networkpolicy.yaml
---
#
# Copyright (C) 2019-2023 vdaas.org vald team <vald@vdaas.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# FIXME: ここをNetwork Policyの定義に変更する
# Valuesにenable/disableみたいな項目を追加する必要があるはず
# Agent:
#   ingress: lb, index
#   egress: none# TODO: もしNetworkPolicyがenabledであればという条件分岐を先頭に追加
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: agent-allow
spec:
  podSelector:
    matchLabels:
      app: vald-agent-ngt
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vald-lb-gateway
        - podSelector:
            matchLabels:
              app: vald-manager-index
